tests/bad/func_redef.ae
/// fail: Function is already defined

def foo(): i32 { }
def foo(): bool { }